--- a/templates/apps/destajos/contratistas/create.html
+++ b/templates/apps/destajos/contratistas/create.html
@@ -4,7 +4,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Crear Contratistas</h1>
+                <h1 class="font-bold text-xl flex items-center gap-2">Crear Contratista</h1>
             </div>
 
             <!-- MIDDLE -->
