--- a/templates/apps/directorio/contacto/create.html
+++ b/templates/apps/directorio/contacto/create.html
@@ -15,7 +15,7 @@
 
             <!-- END -->
             <div class="justify-self-end">
-                <button form="area-form" class="btn btn-primary btn-sm">Crear</button>
+                <button form="contacto-form" class="btn btn-primary btn-sm">Crear</button>
             </div>
         </div>
 
