--- a/templates/components/apps/destajos/contratistas/table/actions.html
+++ b/templates/components/apps/destajos/contratistas/table/actions.html
@@ -1,19 +1,19 @@
 <c-table.actions>
     {% if perms.destajos.view_contratista %}
-{#        <li><a href="{% url 'papeleria:articulos__detail' record.pk %}">Detalle</a></li>#}
+        <li><a href="{% url 'destajos:contratistas__detail' record.pk %}">Detalle</a></li>
     {% endif %}
-    {% if perms.papeleria.change_contratista %}
+    {% if perms.destajos.change_contratista %}
         <li><a href="{% url 'destajos:contratistas__update' record.pk %}">Editar</a></li>
     {% endif %}
-    {% if perms.papeleria.delete_contratista %}
-{#        <li>#}
-{#            <button onclick="articulo_delete_modal_{{ record.pk }}.showModal()">Eliminar</button>#}
-{#        </li>#}
+    {% if perms.destajos.delete_contratista %}
+        <li>
+            <button onclick="contratista_delete_modal_{{ record.pk }}.showModal()">Eliminar</button>
+        </li>
     {% endif %}
 
 
-    {% if perms.papeleria.delete_contratista %}
-        <dialog id="articulo_delete_modal_{{ record.pk }}" class="modal modal-bottom sm:modal-middle">
+    {% if perms.destajos.delete_contratista %}
+        <dialog id="contratista_delete_modal_{{ record.pk }}" class="modal modal-bottom sm:modal-middle">
             <div class="modal-box">
                 <form method="dialog">
                     <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
@@ -22,7 +22,7 @@
                 <p class="py-4">Esta acción no se podrá deshacer.</p>
 
                 <div class="modal-action">
-                    <form action="{% url 'papeleria:articulos__delete' record.pk %}" method="post">
+                    <form action="{% url 'destajos:contratistas__delete' record.pk %}" method="post">
                         {% csrf_token %}
                         <button class="btn btn-error">Confirmar</button>
                     </form>
