--- a/templates/components/shared/messages.html
+++ b/templates/components/shared/messages.html
@@ -1,7 +1,7 @@
 <div class="messages">
     {% for message in messages %}
         <div class="px-4 py-2">
-            <div role="alert" class="alert
+            <div role="alert" class="alert alert-soft
                 {% if message.tags == 'success' %}alert-success
                 {% elif message.tags == 'error' %}alert-error
                 {% elif message.tags == 'warning' %}alert-warning
