--- a/templates/components/shared/modulos/cards.html
+++ b/templates/components/shared/modulos/cards.html
@@ -1,10 +1,9 @@
 <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
     {% for modulo in modulos %}
         <c-shared.modulos.card
-                url="{% url modulo.url_name %}"
+                :url="modulo.url"
                 :icono="modulo.icono"
                 :nombre="modulo.nombre"
-                :permisos="modulo.permisos"
                 :descripcion="modulo.descripcion"
         />
     {% endfor %}
