--- a/templates/partials/apps/destajos/contratistas/precios.html
+++ b/templates/partials/apps/destajos/contratistas/precios.html
@@ -38,6 +38,7 @@
                 <thead>
                 <tr class="bg-base-200">
                     <th>Trabajo</th>
+                    <th>Estructura</th>
                     <th>Precio</th>
                     <th>Unidad</th>
                     <th>Vigencia Desde</th>
@@ -66,6 +67,14 @@
                             {% if form.trabajo.errors %}
                                 <p class="text-error text-xs mt-1">
                                     {{ form.trabajo.errors|join:", " }}
+                                </p>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {{ form.estructura|as_crispy_field }}
+                            {% if form.estructura.errors %}
+                                <p class="text-error text-xs mt-1">
+                                    {{ form.estructura.errors|join:", " }}
                                 </p>
                             {% endif %}
                         </td>
