--- a/templates/apps/directorio/list.html
+++ b/templates/apps/directorio/list.html
@@ -33,6 +33,29 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         {% for contacto in contactos %}
             <c-apps.directorio.contactos.card :contacto="contacto"/>
+        {% empty %}
+            <p>No hay contactos para mostrar.</p>
         {% endfor %}
     </div>
+
+    <!-- PAGINACIÓN -->
+    <div class="mt-6 flex justify-center space-x-2">
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-outline">Anterior</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if num == page_obj.number %}
+                <span class="btn btn-sm btn-primary">{{ num }}</span>
+            {% else %}
+                <a href="?page={{ num }}" class="btn btn-sm btn-outline">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}" class="btn btn-sm btn-outline">Siguiente</a>
+        {% endif %}
+    </div>
+
+
 </c-layouts.app>
