--- a/templates/apps/rrhh/puestos/create.html
+++ b/templates/apps/rrhh/puestos/create.html
@@ -4,7 +4,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Editar {{ contrato }}</h1>
+                <h1 class="font-bold text-xl flex items-center gap-2">Crear Puesto</h1>
             </div>
 
             <!-- MIDDLE -->
@@ -15,11 +15,11 @@
 
             <!-- END -->
             <div class="justify-self-end">
-                <button form="contrato-form" class="btn btn-primary btn-sm">Guardar</button>
+                <button form="puesto-form" class="btn btn-primary btn-sm">Crear</button>
             </div>
         </div>
 
     </c-slot>
 
-    <c-apps.rrhh.contratos.form/>
+    <c-apps.rrhh.puestos.form/>
 </c-layouts.app>
