--- a/templates/apps/rrhh/areas/create.html
+++ b/templates/apps/rrhh/areas/create.html
@@ -4,7 +4,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Crear Artículo</h1>
+                <h1 class="font-bold text-xl flex items-center gap-2">Crear Área</h1>
             </div>
 
             <!-- MIDDLE -->
