--- a/templates/apps/rrhh/areas/update.html
+++ b/templates/apps/rrhh/areas/update.html
@@ -5,7 +5,7 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">{{ area }}</h1>
+                <h1 class="font-bold text-xl flex items-center gap-2">Editar {{ area }}</h1>
             </div>
 
             <!-- MIDDLE -->
