--- a/templates/apps/rrhh/puestos/list.html
+++ b/templates/apps/rrhh/puestos/list.html
@@ -5,8 +5,8 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Áreas</h1>
-                <h2 class="text-muted text-sm">Catálogo de áreas</h2>
+                <h1 class="font-bold text-xl flex items-center gap-2">Puestos</h1>
+                <h2 class="text-muted text-sm">Catálogo de puestos</h2>
             </div>
 
             <!-- MIDDLE -->
@@ -17,8 +17,8 @@
 
             <!-- END -->
             <div class="justify-self-end">
-                {% if perms.rrhh.add_area %}
-                    <a href="{% url 'rrhh:areas__create' %}" class="btn btn-sm btn-primary">
+                {% if perms.rrhh.add_puesto %}
+                    <a href="{% url 'rrhh:puestos__create' %}" class="btn btn-sm btn-primary">
                         CREAR
                     </a>
                 {% endif %}
