--- a/templates/apps/rrhh/puestos/update.html
+++ b/templates/apps/rrhh/puestos/update.html
@@ -5,28 +5,22 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Contratos</h1>
-                <h2 class="text-muted text-sm">Gestione los contratos de los trabajadores</h2>
+                <h1 class="font-bold text-xl flex items-center gap-2">Editar {{ puesto }}</h1>
             </div>
 
             <!-- MIDDLE -->
             <div class="justify-self-center w-full flex justify-center">
-                <c-shared.searchbar/>
+
             </div>
 
 
             <!-- END -->
             <div class="justify-self-end">
-                {% if perms.rrhh.add_contrato %}
-                    <a href="{% url 'rrhh:contratos__create' %}" class="btn btn-sm btn-primary">
-                        CREAR
-                    </a>
-                {% endif %}
+                <button form="puesto-form" class="btn btn-primary btn-sm">Guardar</button>
             </div>
-
         </div>
 
     </c-slot>
 
-    {% render_table table %}
+    <c-apps.rrhh.puestos.form/>
 </c-layouts.app>
