--- a/templates/daisyui5/layout/help_text.html
+++ b/templates/daisyui5/layout/help_text.html
@@ -1,7 +1,7 @@
 {% if field.help_text %}
     {% if help_text_inline %}
-        <span id="{{ field.auto_id }}_helptext" class="text-sm text-muted text-base-content/80">{{ field.help_text|safe }}</span>
+        <span id="{{ field.auto_id }}_helptext" class="text-xs text-muted text-base-content/80">{{ field.help_text|safe }}</span>
     {% else %}
-        <div {% if field.auto_id %}id="{{ field.auto_id }}_helptext" {% endif %}class="text-sm text-muted text-base-content/80">{{ field.help_text|safe }}</div>
+        <div {% if field.auto_id %}id="{{ field.auto_id }}_helptext" {% endif %}class="text-xs text-muted text-base-content/80">{{ field.help_text|safe }}</div>
     {% endif %}
 {% endif %}
